# pyclaw

./: .env.example  .gitignore  AGENT.md  CODE_REVIEW.md  CONFIG.md  CONFIG_REFACTOR_SUMMARY.md  GITHUB_SETUP.md  IDENTITY.md  IMPROVEMENTS_COMPLETED.md  INSTALL.md  INSTALL_FIX.md  LangChain 技术文档.md  LangChain 核心概念与最佳实践 - 结构化大纲.md  LangChain_LangGraph 完整使用指南.md  QUICKSTART.md  README.md  SECURITY_AUDIT.md  SKILLS_RESTRUCTURE_FINAL.md  TOOLS_INTEGRATION.md  USER.md  UV_CONFIG.md  cli.py  config.example.json  config.multi-agent-fast.json  config.multi_agent.example.json  init_workspace.py  main.py  main_feishu.py  pyproject.toml  requirements-dev.txt  requirements.txt  start-no-proxy.sh  start-with-bge.sh  test_feishu.py  upload-to-github.sh  uv.toml  人格记忆.md  长期记忆.md
.clawhub/: lock.json
agents/: README.md  __init__.py  langgraph_agent.py  multi_agent.py  providers.py
channels/: __init__.py  feishu_channel.py
config/: __init__.py  config.py  email_config.example.json  loader.py  schema.py
docs/: CHAT_RECORD_AUTO_SAVE.md  CONFIG_MANAGER.md  CONTEXT7_SKILL_FIX.md  CONTEXT_FIX_SUMMARY_AND_MEMORY.md  CONTEXT_RECOVERY_IMPLEMENTATION.md  CORRECT_DIRECTORY_STRUCTURE.md  DETAILED_SUMMARY_GENERATION.md  EMAIL_WORKFLOW_README.md  FINAL_DIRECTORY_STRUCTURE.md  FIX_LANGCHAIN_TOOL_CONVERSION.md  FIX_TAVILY_KWARGS.md  FIX_TAVILY_TOOL_REGISTRATION.md  HEARTBEAT_SCHEDULER.md  HIGH_PERFORMANCE_CONFIG.md  LANGCHAIN_FILE_TOOLS.md  LANGCHAIN_LANGGRAPH_COMPLETE_GUIDE.md  LANGCHAIN_TOOL_COMPARISON.md  LANGCHAIN_WEB_FETCH_SETUP.md  LANGCHAIN_WEB_TOOLS_INSTALLED.md  MEMORY_DIRECTORY_FIX.md  MEMORY_TOOL_SETUP.md  MULTI_AGENT_ARCHITECTURE.md  MULTI_AGENT_SKILL_FIX.md  OPTIONAL_DEPENDENCIES.md  RETRIEVAL_COMPARISON.md  RUNTIME_FILES_EXPLANATION.md  SKILL_HOTPLUG.md  SKILL_LOADING_FIX.md  SKILL_PATHS_FIX.md  TAVILY_SEARCH_SETUP.md  TOOLS_CLEANUP.md  TOOL_REFACTORING_COMPLETE.md  TROUBLESHOOTING_TIMEOUT.md  WORKSPACE_REFACTORING.md  本地模型配置指南.md  结构化文档模板.md  邮件发送快速入门.md  邮件发送配置指南.md
docs/templates/: document_notification.html
examples/: basic_client.py  langchain_multi_agent.py
gateway/: __init__.py  auth.py  protocol.py  server.py
memory/: 2026-03-12.md  2026-03-13.md  README.md  __init__.py  advanced_retrieval.py  faiss_index.py  rag_memory.py  simple_memory.py  vector_memory.py
memory_chat/: 2026-03-14.json  2026-03-14.md  README.md
pyclaw-web/: AUTO_RECONNECT.md  MARKDOWN_FIX.md  MARKDOWN_RENDER.md  README.md  TIMEOUT_CONFIG.md  TIMEOUT_UPDATE.md  main.py  requirements.txt  run.py  start.sh  test_chat.py
pyclaw-web/app/: main.py
pyclaw-web/docs/: TIMEOUT_FIX.md
pyclaw-web/static/css/: style.css
pyclaw-web/static/js/: chat.js
pyclaw-web/templates/: chat.html  config.html  index.html  sessions.html  tools.html
pyclaw_web/: __init__.py  run.py
scheduler/: README.md  __init__.py  heartbeat.py
sessions/: __init__.py  manager.py  store.py
skill/: skill_loader.py
skills/: skill_loader.py
skills/duckduckgo-search/: SKILL.md  _meta.json
skills/duckduckgo-search/.clawhub/: origin.json
skills/email-sender/: README.md  SKILL.md  USAGE.md  tools.json
skills/nano-banana-pro/: README.md  SKILL.md
skills/nano-banana-pro/.clawhub/: lock.json
skills/nano-banana-pro/scripts/: edit.py  generate.py
skills/nano-banana-pros/: SKILL.md  _meta.json  audio-models.md  chat-models.md  image-models.md  search-models.md  tools-models.md  video-models.md
skills/nano-banana-pros/.clawhub/: origin.json
tests/: __init__.py  conftest.py  test_agents.py  test_rag_memory.py  test_tools.py
tools/: __init__.py  chat_recorder.py  custom_tools.py  email_workflow.py  file_tools.py  langchain_native_tools.py  langchain_tools.py  langchain_web_tools.py  memory_tools.py  registry.py  send_document_email.py  tavily_tools.py  web_tools.py
utils/: exceptions.py  logging_config.py
workspace/: BOOTSTRAP.md  README.md  TOOLS.md  USER.md  config.high-performance.json
workspace/memory/: 2026-03-14.md
workspace/skills/: skill_loader.py
workspace/skills-installed/: README.md
workspace/skills-installed/context7/: SKILL.md  _meta.json  package-lock.json  package.json  query.ts  query_langchain.js  tsconfig.json
workspace/skills-installed/context7/.clawhub/: origin.json
workspace/skills-installed/desktop-control/: SKILL.md  __init__.py  demo.py
workspace/skills-installed/email-sender/: README.md  SKILL.md  email_skill.py  email_tools.py  install.sh
workspace/skills-installed/email-sender/scripts/: send_email.py
workspace/skills-installed/github-trending-cn/: SKILL.md  _meta.json
workspace/skills-installed/github-trending-cn/.clawhub/: origin.json
workspace/skills-installed/github-trending-cn/scripts/: github_trending.py
workspace/skills-installed/github/.clawhub/: origin.json
(+2 files in other folders)
